<resources>
    <string name="app_name">At-ProjetoInterfase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Informações Pessoais</string>
    <string name="menu_gallery">Publicações</string>
    <string name="menu_slideshow">Experiência Profissional</string>
    <string name="menu_formacao">Formação</string>
    <string name="menu_cursos">Cursos</string>
</resources>